tests/baselines/reference/nestedFreshLiteral.errors.txt
tests/cases/compiler/nestedFreshLiteral.ts(12,21): error TS2322: Type '{ colour: string; }' is not assignable to type 'CSSProps'.
  Object literal may only specify known properties, but 'colour' does not exist in type 'CSSProps'. Did you mean to write 'color'?


==== tests/cases/compiler/nestedFreshLiteral.ts (1 errors) ====
    interface CSSProps  {
      color?: string
    }
    interface NestedCSSProps {
      nested?: NestedSelector
    }
    interface NestedSelector  {
      prop: CSSProps;
    }
    
    let stylen: NestedCSSProps = {
      nested: { prop: { colour: 'red' } }
                        ~~~~~~~~~~~~~
!!! error TS2322: Type '{ colour: string; }' is not assignable to type 'CSSProps'.
!!! error TS2322:   Object literal may only specify known properties, but 'colour' does not exist in type 'CSSProps'. Did you mean to write 'color'?
    }